fixed dark mode links

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -24,10 +24,10 @@ body{
   color: #eee;
 }
 body a {
-  color: #111;
+  color: #FFCB01;
 }
 body button {
   background-color: #eee;
-  color: #111;
+  color: #FFCB01;
 }
 
